# aitor

./: .gitignore  LICENCE.md  README.md  build.sh  pyproject.toml
aitor/: main.py
